
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.runtime;


/*-- MESSAGES ----------------------------------------------------------------*/

message TrainingJob {

  /*-- fields --*/
  string training_id = 1;
  string model_name = 2;
}
